--- a/src/app/admin/admin.page.html
+++ b/src/app/admin/admin.page.html
@@ -10,9 +10,9 @@
   </div>
 </ion-toolbar>
   <div class="sign-container gradient-1">
-        <div >
-          <section class="content">
-            <div class="container-fluid">
+        <div class="menuc">
+          <section>
+            <div>
               <div class="row">
                 <div class="col-lg-3 col-6">
                   <div class="small-box bg-info"  background-color: #ccc;>
@@ -29,19 +29,6 @@
                   </div>
                 </div>
                 <div class="col-lg-3 col-6">
-                  <div class="small-box bg-success">
-                    <div class="inner" >
-                      <h2>Calificaciones<sup style="font-size: 20px"></sup></h2>
-      
-                      <p></p>
-                    </div>
-                    <div class="icon">
-                      <i><ion-icon name="school-outline"></ion-icon></i>
-                    </div>
-                    <a href="/calificaciones" class="small-box-footer">Click aqui<i class="fas fa-arrow-circle-right"></i></a>
-                  </div>
-                </div>
-                <div class="col-lg-3 col-6">
                   <div class="small-box bg-warning">
                     <div class="inner">
                       <h2>Clases</h2>
@@ -55,7 +42,7 @@
                 <div class="col-lg-3 col-6">
                   <div class="small-box bg-danger">
                     <div class="inner">
-                      <h2>Estadisticas</h2>
+                      <h2>Calificaciones</h2>
       
                       <p></p>
                     </div>
