--- a/src/app/admin/contacto/contacto.page.html
+++ b/src/app/admin/contacto/contacto.page.html
@@ -7,6 +7,7 @@
   <form>
     <label>Para crear un plan de trabajo con nosotros llámanos</label><br/>
       <img src="assets/img/LOGO DOABLY.png" alt="User Image">
+     <a href="https://www.facebook.com/Doablyacademy" target="_blank"><ion-icon name="logo-facebook" style="font-size:50px"></ion-icon></a> <a href="https://wa.me/4491782792" target="_blank"></a>
   </form>
 </div>
 </ion-content>
