--- a/src/app/admin/maestros/maestros.page.html
+++ b/src/app/admin/maestros/maestros.page.html
@@ -24,7 +24,7 @@
                 <div class="col-lg-7">
                     <span>
                     <h3>Nombre</h3>
-                        <select  type="text" formControlName="nombre_alumno" class="form-control" value="{{user.displayName}}">
+                        <select  type="text" formControlName="nombre_alumno" class="form-control">
                           <option>{{user.displayName}}</option>
                           </select>
                         <i class="fas fa-credit-card" [class.green-icon]="this.form.get('nombre_alumno')?.valid"
@@ -36,7 +36,7 @@
                 <div class="col-lg-7">
                     <span>
                     <h3>Nivel de ingles</h3>
-                        <select type="text" formControlName="nivelIngles" class="form-control" maxlength="16"
+                        <select class="nivel" type="text" formControlName="nivelIngles" class="form-control" maxlength="16"
                         placeholder="Nivel de ingles">
                             <option>A1</option>
                             <option>A2</option>
@@ -49,23 +49,7 @@
                     </span>
                 </div>
                 </div>
-                <div class="row">
-                  <div class="col-lg-7">
-                      <span>
-                      <h3>Nivel de ingles</h3>
-                          <select type="text" formControlName="nivelIngles" class="form-control" maxlength="16"
-                          placeholder="Nivel de ingles">
-                              <option>A1</option>
-                              <option>A2</option>
-                              <option>B1</option>
-                              <option>B2</option>
-                              <option>C1</option>
-                            </select>
-                          <i class="fas fa-credit-card" [class.green-icon]="this.form.get('nivelIngles')?.valid"
-                              [class.red-icon]="this.form.get('nivelIngles')?.invalid && this.form.get('nivelIngles')?.touched"></i>
-                      </span>
-                  </div>
-                  </div>
+                
                 <h3>Fecha</h3>
                 <div class="row">
                 <div class="col-lg-7">
@@ -93,15 +77,32 @@
                   </span>
                   <input type="time" formControlName="hora" class="form-control" placeholder="Hora">
                 </div>
+                <div class="row">
+                  <div class="col-lg-7"  *ngFor="let maestros of listTarjetas2">
+                    <ng-container>
+                      <span>
+                      <h3>Maestro disponible</h3>
+                          <select formControlName="maestro" class="form-control" >
+                            <option>{{maestros.email}}</option>
+                            </select>
+                      </span>
+                    </ng-container>
+
+                  </div>
+                  </div>
+                  <br>
+
                 <div class="d-grid gap-2" >
                     <button [disabled]="form.invalid" class="boton" type="submit"  >
-                        <i class="fas fa-database" ></i> &nbsp;Aceptar
+                        <i class="fas fa-database"></i> &nbsp;Aceptar
                     </button>
                 </div>
                   </div>
                 </div>
             </form>
             
+        </div>
+        <div>
         </div>
         <div >
           <div class="card-body">
@@ -110,14 +111,9 @@
                     <tr>
                         <td>Nombre</td>
                         <td>Nivel de ingles</td>
-                        <td>Fecha</td>
+                        <td>Dia</td>
                         <td>Hora</td>
-<<<<<<< HEAD
-                        
-=======
-                        <td>Maestro<td>
-                        <td>url</td>
->>>>>>> 2af19471739c1f23defa015dcaaa77d5bcc808c3
+                  
                     </tr>
                       <ng-container *ngFor="let clases of listTarjetas">
                         <tr *ngIf="user.displayName === clases.nombre_alumno">
@@ -125,17 +121,6 @@
                           <td>{{clases.nivelIngles }}</td>
                           <td>{{clases.fecha }}</td>
                           <td>{{clases.hora }}</td>
-<<<<<<< HEAD
-=======
-                          <td>{{clases.maestro_t }}</td>
-                          <td>{{clases.url}}</td>
-
-                           <td>
-                               <button (click)="editarTarjeta(clases.id)" class="far fa-edit text-info"></button>
-                               <button (click)="eliminarTarjeta(clases.id)" class="far fa-trash-alt text-danger"></button>
-                          </td>
-   
->>>>>>> 2af19471739c1f23defa015dcaaa77d5bcc808c3
                       </ng-container>
               </table>
           </div>
