--- a/src/app/forgot-password/forgot-password.page.html
+++ b/src/app/forgot-password/forgot-password.page.html
@@ -1,4 +1,4 @@
-<ion-content>
+<ion-content *ngIf="user$ | async as user">
   <div class="sign-container gradient-1">
     <div class="header">
       <div class="title ion-text-center">
@@ -10,12 +10,12 @@
     <ion-list lines="none" class="form fade-in">
     <ion-item>
       <ion-label>Email</ion-label>
-      <ion-input type="text" #email required></ion-input>
+      <ion-input type="text" #email value="{{user.email}}"></ion-input>
       <ion-icon name="mail-outline"></ion-icon>
     </ion-item>
     <ion-row>
       <ion-col>
-        <ion-button type="submit" (click)="onResetPassword(email)" expand="block">Mandar peticion al correo</ion-button>
+        <ion-button type="submit" (click)="onResetPassword(email)" expand="block">Enviar link</ion-button>
       </ion-col>
     </ion-row>
     </ion-list>
