--- a/src/app/admin-maestro/clases/maestros.page.html
+++ b/src/app/admin-maestro/clases/maestros.page.html
@@ -2,7 +2,7 @@
   <ion-button routerLink="/admin-maestro" expand="block">Regresar</ion-button>
 </ion-header>
 <ion-content *ngIf="user$ | async as user">
-  <ion-header>
+  <ion-header  >
    <ion-toolbar>
     <div class="user-panel mt-3 pb-3 mb-3 d-flex">
     <div class="image">
@@ -15,37 +15,27 @@
     </ion-toolbar>
   </ion-header>
   <div class="fondo">
-    <div >
-      
-      <div >
-        <div >
-          <div>
             <br>
             <h2>Tus clases esta semana</h2>
             <br>
-              <table class="table">
-                    <tr>
+              <table class="fondo" > 
+                      <tr>
                         <td>Nombre del alumno</td>
                         <td>Nivel de ingles</td>
                         <td>Fecha</td>
                         <td>Hora</td>
                      </tr>
-                     <ng-container *ngFor="let clases of listTarjetas">
-                      <tr>
-                        <th scope="row">{{clases.nombre_alumno}}</th>
-                        <td>{{clases.nivelIngles }}</td>
-                        <td>{{clases.fecha }}</td>
-                        <td>{{clases.hora }}</td>
-                         <td>
-                             <button (click)="eliminarTarjeta(clases.id)" class="botoneliminar">Eliminar</button>
-                        </td>
+                     <br>
+                     <ng-container>
+                      <tr *ngFor="let clases of listTarjetas" class="table">
+                        <td *ngIf="clases.maestro == user.email">{{clases.nombre_alumno}}</td>
+                        <td *ngIf="clases.maestro == user.email">{{clases.nivelIngles }}</td>
+                        <td *ngIf="clases.maestro == user.email">{{clases.fecha }}</td>
+                        <td *ngIf="clases.maestro == user.email">{{clases.hora }}</td>
+                        <a href="/forgot-password" class="small-box-footer">Click aqui<i class="fas fa-arrow-circle-right"></i></a>
                       </tr>
                     </ng-container>
                </table>
           </div>
-    </div>
-    </div>
-  </div>
-</div>
 </ion-content>
 
