--- a/src/app/admin-maestro/clases/maestros.page.scss
+++ b/src/app/admin-maestro/clases/maestros.page.scss
@@ -1,19 +1,22 @@
-.far {
-    cursor: pointer;
-    margin-right: 7px;
-}.green-icon {
-    color: #142c5c ;
-}
 .fondo{
     background-color: #142c5c;
     color: #ffff;
-}
-.table{
-    border-radius: 0.50rem;
+    text-align: center;
+    width: 100%;
     text-align: center;
     font-size: large;
+    font-family:Verdana, Geneva, Tahoma, sans-serif;
     color: #ffff;
 }
+
+.table{
+    text-align: center;
+    font-size: large;
+    font-family:Verdana, Geneva, Tahoma, sans-serif;
+    color: #ffff;
+    border-bottom: 50%;
+}
+
 h2{
     text-align: center;
 }
@@ -25,6 +28,7 @@ h2{
   border: 1px solid transparent;
   padding: 0.375rem 0.75rem;
   font-size: 1rem;
+  font-family:Verdana, Geneva, Tahoma, sans-serif;
   line-height: 1.5;
   border-radius: 0.25rem;
   transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
@@ -42,39 +46,6 @@ h2{
   transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
 }
 
-.boton2{
-    background-color: #fefeff;
-    display: inline-block;
-  color: white;
-  border: 1px solid transparent;
-  border-radius: 0.25rem;
-  transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
-}
-.boton:disabled {
-    background-color: #bb5454;
-    opacity: 40%;
-  font-weight: 400;
-  color: white;
-  border: 1px solid transparent;
-  padding: 0.375rem 0.75rem;
-  font-size: 1rem;
-  line-height: 1.5;
-  border-radius: 0.25rem;
-  transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
-  }
-
-.red-icon {
-    color: #dc3545;
-}
-
-.spinner-border {
-    height: 1.5rem;
-    width: 1.5rem;
-}
 .titulo{
     color: black;
-}
-
-input{
-    color: #dc3545;
 }
