--- a/src/app/register/register.page.html
+++ b/src/app/register/register.page.html
@@ -8,10 +8,6 @@
     <div class="login-container">
   <form>
     <ion-list lines="none" class="form fade-in">
-      <ion-item>
-        <ion-label>Nombre completo</ion-label>
-        <ion-input type="text" #displayName required></ion-input>
-      </ion-item>
     <ion-item>
       <ion-label >Email</ion-label>
       <ion-input type="text" #email required></ion-input>
@@ -22,7 +18,7 @@
     </ion-item>
     <ion-row>
       <ion-col>
-        <ion-button type="submit" (click)="onRegister(displayName, email, password)" expand="block">Register</ion-button>
+        <ion-button type="submit" (click)="onRegister(email, password)" expand="block">Register</ion-button>
       </ion-col>
     </ion-row>  
     </ion-list>
