--- a/src/app/admin/estadisticas/estadisticas.page.scss
+++ b/src/app/admin/estadisticas/estadisticas.page.scss
@@ -11,13 +11,21 @@ h3:hover{
     color: #D4AF37;
 }
 .table{
-  background-color: #142c5c ;
+  background-color: #D4AF37;
   color: #ffff;
   border-radius: 2px;
   margin-bottom: auto;
   border-bottom: 50%;
   font-weight: bold;
   font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+}
+.semana{
+  text-align: center;
+  font-size: 25px;
+  color: #142c5c;
+  font-weight: bold;
+  font-family: Arial, Helvetica, sans-serif;
+
 }
 .retro{
     text-align: center;
