--- a/src/app/admin/admin.page.scss
+++ b/src/app/admin/admin.page.scss
@@ -7,3 +7,210 @@
  *{
   text-align: center;
  }
+ .mensaje a {
+  color: inherit;
+  margin-right: .5rem;
+  display: inline-block;
+}
+.mensaje a:hover {
+  color: #309B76;
+  transform: scale(1.4)
+}
+.animacion {
+  z-index: 1;
+}
+span.cuatro,
+span.dos,
+span.tres,
+span.uno {
+  border: 0;
+  display: block;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  background-color: #fff;
+  animation: vuela 10s linear infinite normal both;
+}
+span.uno {
+  width: 50px;
+  height: 50px;
+  background-color: #d96f5b;
+  bottom: -50px;
+  border-radius: 30%;
+}
+span.dos {
+  width: 40px;
+  height: 40px;
+  background-color: #D4AF37;
+  bottom: -40px;
+  border-radius: 30%;
+}
+span.tres {
+  width: 30px;
+  height: 30px;
+  background-color:  #9baa2f;
+  bottom: -30px;
+  border-radius: 30%;
+}
+span.cuatro {
+  width: 20px;
+  height: 20px;
+  background-color:#283d4a;
+  bottom: -20px;
+  border-radius: 30%;
+}
+@keyframes vuela {
+  from {
+      transform: rotate(0deg);
+      bottom: 0;
+      opacity: 0;
+  }
+  5% {
+      opacity: 1;
+  }
+  60% {
+      opacity: 1;
+  }
+  to {
+      transform: rotate(160deg);
+      bottom: calc(100% + 100px);
+      opacity: 0;
+  }
+}
+/* secuencia y orden */
+.animacion span:nth-child(1) {
+  left: 20%;
+  animation-delay: 3s;
+}
+.animacion span:nth-child(2) {
+  left: 50%;
+}
+.animacion span:nth-child(3) {
+  left: 35%;
+  animation-delay: 5s;
+}
+.animacion span:nth-child(4) {
+  left: 75%;
+  animation-delay: 1s;
+}
+.animacion span:nth-child(6) {
+  left: 85%;
+  animation-delay: 3s;
+}
+.animacion span:nth-child(7) {
+  left: 90%;
+  animation-delay: 5s;
+}
+.animacion span:nth-child(8) {
+  left: 65%;
+}
+.animacion span:nth-child(9) {
+  left: 60%;
+}
+.animacion span:nth-child(10) {
+  left: 75%;
+  animation-delay: 6s;
+}
+.animacion span:nth-child(11) {
+  left: 10%;
+}
+.animacion span:nth-child(12) {
+  left: 45%;
+  animation-delay: 3s;
+}
+html {
+  -webkit-text-size-adjust: 100%;
+  -ms-text-size-adjust: 100%;
+  text-size-adjust: 100%;
+  line-height: 1.4;
+}
+
+
+* {
+  margin: 0;
+  padding: 0;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+}
+
+.contenedor-fondo-animado {
+  display: block;
+  height: 100vh;
+  background: linear-gradient(#e4a396,  #fff);
+  color: #fff;
+  position: relative;
+  overflow: hidden;
+}
+.seccion-contenido {
+  display: inline-block;
+  width: 100%;
+  height: 100%;
+  text-align: center;
+}
+.seccion-contenido .contenido {
+  display: inline-block;
+  width: 100%;
+  max-width: 100%;
+  text-align: center;
+}
+.seccion-contenido .contenido h4 {
+  font-size: 4rem;
+  margin-bottom: 2.5rem;
+  font-family:'Times New Roman', Times, serif;
+  color: #242a5a;
+  max-width: 100%;
+}
+.seccion-contenido .contenido p {
+  font-size: 1.75rem;
+  margin-bottom: 3.5rem;
+  font-family:'Times New Roman', Times, serif;
+  color: #242a5a;
+}
+.seccion-contenido .contenido h4,
+.seccion-contenido .contenido p {
+  text-shadow: 0 0 5px rgba(0, 0, 0, .2);
+}
+.seccion-contenido .contenido ul {
+  list-style: none;
+}
+.seccion-contenido .contenido ul a {
+  display:block;
+  text-decoration: none;
+  color: inherit;
+  font-size: 1.2em;
+  padding: 15px;
+  border-radius: 12px;
+  transition: all ease-in 100ms;
+  transform: translateY(0)
+}
+.seccion-contenido .contenido ul a:hover {
+  transform: translateY(-.5rem);
+}
+.seccion-contenido .contenido li:nth-child(1) a {
+  border: 3px solid #242a5a;
+  background-color: #fff;
+  color: #242a5a;
+}
+.seccion-contenido .contenido li:nth-child(2) a {
+  border: 3px solid #D4AF37;
+  background-color: #fff;
+  color: #242a5a;
+}
+.seccion-contenido .contenido li:nth-child(3) a {
+  border: 3px solid #f47957;
+  background-color: #fff;
+  color: #242a5a;
+}
+.seccion-contenido .contenido ul li {
+  display: inline-block;
+}
+.seccion-contenido .contenido ul li + li {
+  margin-left: 2.5rem;
+}
+.nombre{
+  color: #ffffff;
+}
+.nombre:hover{
+  color:  #142c5c;
+}
